# esds-apps

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  esds-apps.service  pyproject.toml
.vsode/: settings.json
assets/: new_membership_email_image_to_cid_map.json
nginx/conf.d/: default.conf
public/: new_membership_email_image_to_cid_map.json
public/css/: base.css  membership_cards.css  new_membership_email.css  rapid_scanner.css  site.css  table_page.css
public/js/: attendance.js  attendance_crypto.js  attendance_summaries.js  card_scanner.js  check_logs.js  door_volunteers.js  membership_cards.js  pos_permissions.js  qr_codes.js
src/esds_apps/: auth.py  classes.py  config.py  dancecloud_interface.py  main.py  membership_cards.py  pass2u_interface.py  qr_code_db.py  qr_codes_schema.sql  simple_cache.py
src/esds_apps/attendance/: analysis.py  attendance_db.py  attendance_schema.sql  dancer_matching.py  dedup_recovery.py  dedup_ui.py  early_term_stats.csv  ingest.py  parsers.py  pseudonymise.py  pseudonyms_db.py
templates/: 500.html  attendance.html  card_scanner.html  check_logs.html  door_volunteers.html  landing.html  login.html  membership_cards.html  membership_navbar.html  new_membership_email.html  pdf_card_error.html  pdf_card_sheet.html  pos_permissions.html  qr_code.html  qr_codes.html  rapid_scanner.html
tests/: conftest.py
tests/esds_apps/: test_auth.py  test_dancecloud_interface.py  test_main.py  test_membership_cards.py  test_pass2u_interface.py  test_qr_code_db.py  test_simple_cache.py
tests/esds_apps/attendance/: conftest.py  test_analysis.py  test_attendance_db.py  test_dancer_matching.py  test_dedup_recovery.py  test_ingest.py  test_parsers.py  test_pseudonymise.py  test_pseudonyms_db.py  workbooks.py
working/: qr_codes_schema.sql
