[project]
name = "esds_apps"
version = "0.1.0"
description = "Backend FastAPI package for various applications designed to help the Edinburgh Swing Dance Society."
authors = [
    {name = "Tristan Goss",email = "tristanjdgoss@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)"
]

[tool.poetry]
packages = [{include = "esds_apps", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
