[project]
name = "esds_apps"
version = "0.1.0"
description = "Backend FastAPI package for various applications designed to help the Edinburgh Swing Dance Society."
authors = [
    {name = "Tristan Goss",email = "tristanjdgoss@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "cairosvg (>=2.7.1,<3.0.0)",
    "lxml (>=5.3.1,<6.0.0)",
    "segno (>=1.6.6,<2.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
]

[tool.poetry]
packages = [{include = "esds_apps", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
