[project]
name = "esds_apps"
version = "0.1.0"
description = "Backend FastAPI package for various applications designed to help the Edinburgh Swing Dance Society."
authors = [
    {name = "Tristan Goss",email = "tristanjdgoss@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "cairosvg (>=2.7.1,<3.0.0)",
    "lxml (>=5.3.1,<6.0.0)",
    "segno (>=1.6.6,<2.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "weasyprint (>=65.0,<66.0)",
    "httpx (>=0.28.1,<0.29.0)",
]

[tool.poetry]
packages = [{include = "esds_apps", from = "src"}]


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
ruff = "0.11.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "C90",      # Cyclomatic complexity
    "D",        # pydocstyle
    "E",        # pycodestyle
    "F",        # pyflakes
    "I",        # Sort imports
    "PLR",      # pylint
]
ignore = [
    "D100",  # no module docstring
    "D101",  # no class docstring
    "D103",  # no function docstring
    "D104",  # no package docstring
    "D105",  # no magic method docstring
    "D107",  # no __init__ docstring
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "single"
